--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,9 @@ meilisearch
 boto3
 fastapi
 uvicorn
-pydantic==2.5.0
+pydantic
 unstructured[all-docs]
 lxml
 beautifulsoup4
 pydantic-settings
 langgraph
-PyYAML==5.3.1  # Add this line to pin PyYAML version
